--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
-  "name": "cloud4u",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "astro": "^5.16.0"
-  }
+    "name": "cloud4u",
+    "type": "module",
+    "version": "0.0.1",
+    "scripts": {
+        "dev": "astro dev",
+        "build": "astro build",
+        "preview": "astro preview",
+        "astro": "astro",
+        "format": "prettier --write .",
+        "format:check": "prettier --check ."
+    },
+    "dependencies": {
+        "@tailwindcss/vite": "^4.1.17",
+        "astro": "^5.16.0",
+        "nodemailer": "^7.0.10",
+        "tailwindcss": "^4.1.17"
+    },
+    "devDependencies": {
+        "@types/nodemailer": "^7.0.4",
+        "prettier": "^3.6.2",
+        "prettier-plugin-astro": "^0.14.1"
+    }
 }
