--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "cloud4u",
+    "name": "sysmo",
     "type": "module",
     "version": "0.0.1",
     "scripts": {
@@ -13,11 +13,9 @@
     "dependencies": {
         "@tailwindcss/vite": "^4.1.17",
         "astro": "^5.16.0",
-        "nodemailer": "^7.0.10",
         "tailwindcss": "^4.1.17"
     },
     "devDependencies": {
-        "@types/nodemailer": "^7.0.4",
         "prettier": "^3.6.2",
         "prettier-plugin-astro": "^0.14.1"
     }
